# Todo_Solodovnikov

./: README.md  pyproject.toml
todo/: settings.py  urls.py
users/migrations/: 0001_initial.py
