[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Даниил <daniil.02@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-allauth = "^0.62.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
